byte-code-compiler/test_files/typing/bad/testfile-redef-7.psc

int_32 f(int_32 x, int_32 y, int_32 x) {
  return 0;
}
int_32 main() {
  f(1, 2, 3);
}
